src/snapshots/afrotd__parser__tests__interpreation_html_8.4.2_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.4.2.III
        </p>
    </div>
    <div class="message-body">
        <p>
            4. und 8 von der B-40. Team A’s Fieldgoalversuch prallt auf den
            Boden an der B-3 und von dort in die Endzone, wo er von einem Team
            B-Spieler aus der Luft gefangen und anschließend dead wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchback (Regel 8.6.1.b). Team B’s Ball an der B-20.
            </p>
        </details>
    </div>
</article>
