src/snapshots/afrotd__parser__tests__interpreation_html_8.4.2_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.4.2.V
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s erfolgloser Fieldgoalversuch berührt den Boden jenseits
            der neutralen Zone und prallt zurück hinter die neutrale Zone, wo
            der Ball von B1 recovert und in die Endzone advanct wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchdown (Regel 6.3.5).
            </p>
        </details>
    </div>
</article>
