src/snapshots/afrotd__parser__tests__interpreation_html_8.5.1_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.5.1.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Scrimmage Kick überquert nicht die neutrale Zone oder überquert
            die neutrale Zone und wird zuerst von Team B berührt oder wird
            nicht berührt und prallt zurück in die Endzone, wo der Ball in Team
            A’s Besitz dead wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety (Regel 8.7.2.a).
            </p>
        </details>
    </div>
</article>
