src/snapshots/afrotd__parser__tests__interpreation_html_8.5.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.5.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            B1 fängt tief in seiner Endzone einen legalen Vorwärtspass ab (kein
            Try), advanct, aber verlässt die Endzone nicht und wird dort zu
            Boden gebracht. Während seines Laufes clippt B2 in der Endzone A1.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Safety, da die Strafe den Ball in Team B’s Besitz in der
                Endzone belässt.
            </p>
        </details>
    </div>
</article>
