src/snapshots/afrotd__parser__tests__interpreation_html_8.6.1_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.6.1.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A’s Fumble berührt den Pylon an der Schnittstelle von der
            B-Goalline mit der Seitenlinie.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Touchback. Team B’s Ball von der B-20 (Regeln 7.2.4.c und
                4.2.3.b).
            </p>
        </details>
    </div>
</article>
