src/snapshots/afrotd__parser__tests__interpreation_html_8.6.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 8.6.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            3. und 5 von der B-20. B44 fängt in B’s Endzone einen Vorwärtspass
            ab. Während er sich noch in der Endzone befindet, fumbelt er. Der
            Ball rollt vorwärts ins Spielfeld. Beim Kampf um den Ball kickt A33
            den Ball in B’s Endzone und über die Endlinie ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                1. und 10 für Team B an der B-30. Das Ergebnis des Downs ist
                ein Touchback und daher ist die B-20 der Enforcement Spot für
                die 10-Meterstrafe für das illegale Kicken. Der Touchback
                resultiert aus dem Antrieb, den A33 dem Ball durch das illegale
                Kicken gab (Regeln 2.16.1.a, 8.7.1, 10.2.2.d.2.a).
            </p>
        </details>
    </div>
</article>
